erDiagram
    users {
        UUID user_id PK
        VARCHAR first_name
        VARCHAR last_name
        VARCHAR email UK
        VARCHAR password_hash
        VARCHAR phone_number
        TIMESTAMPTZ created_at
        UUID created_by
        TIMESTAMPTZ modified_at
        UUID modified_by
        TIMESTAMPTZ deleted_at
        UUID deleted_by
    }

    centers {
        UUID center_id PK
        VARCHAR name
        VARCHAR address
        VARCHAR city
        VARCHAR phone_number
        VARCHAR email UK
        UUID manager_id FK
        TIMESTAMPTZ created_at
        UUID created_by
        TIMESTAMPTZ modified_at
        UUID modified_by
        TIMESTAMPTZ deleted_at
        UUID deleted_by
    }

    fields {
        UUID field_id PK
        UUID center_id FK
        VARCHAR name
        VARCHAR type
        NUMERIC price_per_hour
        BOOLEAN is_available
        TIMESTAMPTZ created_at
        UUID created_by
        TIMESTAMPTZ modified_at
        UUID modified_by
        TIMESTAMPTZ deleted_at
        UUID deleted_by
    }

    bookings {
        BIGSERIAL booking_id PK
        UUID user_id FK
        UUID field_id FK
        INT status
        TIMESTAMPTZ start_time
        TIMESTAMPTZ end_time
        NUMERIC total_price
        TIMESTAMPTZ booked_at
        BIGINT version
        TIMESTAMPTZ created_at
        UUID created_by
        TIMESTAMPTZ modified_at
        UUID modified_by
        TIMESTAMPTZ deleted_at
        UUID deleted_by
    }

    booking_participants {
        BIGSERIAL booking_participant_id PK
        BIGINT booking_id FK
        UUID user_id FK
        TIMESTAMPTZ created_at
        UUID created_by
        TIMESTAMPTZ modified_at
        UUID modified_by
        TIMESTAMPTZ deleted_at
        UUID deleted_by
    }

    center_roles {
        BIGSERIAL center_role_id PK
        UUID user_id FK
        UUID center_id FK
        VARCHAR role_name
        TIMESTAMPTZ created_at
        UUID created_by
        TIMESTAMPTZ modified_at
        UUID modified_by
        TIMESTAMPTZ deleted_at
        UUID deleted_by
    }

    users ||--o{ centers : "manages (manager_id)"
    centers ||--|{ fields : "has"
    users ||--o{ bookings : "makes"
    fields ||--o{ bookings : "booked via"
    bookings ||--|{ booking_participants : "has"
    users ||--o{ booking_participants : "participates in"
    users ||--o{ center_roles : "assigned"
    centers ||--o{ center_roles : "grants"
